[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlsimtools"
version = "0.1.4"
description = "Automation framework for DL_MONTE and DL_POLY molecular simulations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pymatgen",
    "molmass",
    "natsort",
    "sympy",
    "cycler",
    "dlmontepython",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dlsimtools*"]
